--- a/client/src/components/matchs/match.scss
+++ b/client/src/components/matchs/match.scss
@@ -15,17 +15,16 @@
     --mmm: hsl(155, 51%, 45%);
 }
 
-.match {
-    width: 100%;
-    
-
+.mainmatch {
+    width: 98%;
+        transform: translate(25px,20px);
 
     .matchContent {
         justify-content: center;
         gap: 1.5rem;
         
 
-        .singleMatch {
+        .singlematch {
             height: 100%;
             display: grid;
             row-gap: 10px;
@@ -43,7 +42,7 @@
 
             }
 
-            .imageMatch {
+            .imageDiv {
                 height: 180px;
                 width: 100%;
                 overflow: hidden;
@@ -67,21 +66,21 @@
                     font-size: 1.25rem;
 
                 }
-                .continentMatch{
+                .matchcontinent{
                     gap: .5rem;
 
-                    .matchIcon{
+                    .matchicon{
                         color: var(--textColor);
                         font-size: 18px;
                     }
-                    .name{
+                    .matchname{
                         color: var(--textColor);
                         font-weight: 400;
                         font-size: 14px;
                         
                     }
                 }
-                .matchFees{
+                .matchfees{
                     width: 100%;
                     justify-content: space-between;
                     padding: 1rem;
@@ -89,7 +88,7 @@
                     border-top: 1.5px solid var(--greytext);
                     border-bottom: 1.5px solid var(--greytext);
                     
-                    .matchGrade{
+                    .matchgrade{
                         color: var(--textColor);
                         max-width: 100px;
                         line-height: 20px; 
@@ -102,30 +101,38 @@
 
                         }
                     }
-                    .matchPrice{
+                    .matchprice{
                         font-size: 2rem;
                         color: var(--blackColor);
                     }
 
 
                 }
-                .matchDesc{
+                .matchdesc{
                     font-size: 13.5px;
                     color: var(--textColor);
                     font-weight: 500 ;
                 }
-                .matchBtn{
+                .matchbtn{
                     margin-top: 1rem;
                     color: var(--whiteColor);
-                    font-weight: 600;
-                    justify-content:space-between;
-                    gap: .5rem;
-                    .matchIcon{
+                    font-weight: 700;
+                    gap: 1.5rem;
+                    border-radius: 2rem;
+                    width: 7rem;
+                    height: 2.5rem;
+                    border: none;
+                    background: var(--gradientColor);
+                    transform: translatex(13rem);
+                    .ta{
+                        transform: translate(25px,-1px);
+                        .matchicon{
+                        transform: translate(1px,3px);
                         align-self: center;
                         font-size: 18px;
 
                     }
-                }
+                }}
 
 
             }
@@ -138,11 +145,11 @@
 
 
 @media screen and (min-width:500px) {
-  
+   
     .matchContent{
         grid-template-columns: repeat(4,1fr);
         
-        .singlematch{
+        .singleDestination{
             height: auto;
 
         }
