--- a/client/src/components/matchs/creatematch.css
+++ b/client/src/components/matchs/creatematch.css
@@ -14,20 +14,21 @@
   --cardHover: rgba(255, 255, 255);
   --mmm: hsl(155, 38%, 41%);
   --blackColor2: hsl(198, 19%, 45%);
+  --blackColor6: hsl(198, 31%, 38%);
+  --blackColor3: hsl(153, 29%, 33%);
 }
 
 .creatematchsection {
   transform: translateY(-3rem);
 }
 .creatematchsection .creatematchmain {
-  border: var(--whiteColor) 3px solid;
-  height: 23rem;
+  height: 24rem;
   width: 45rem;
   margin: 0 auto;
   transform: translateY(5rem);
   border-radius: 2rem;
-  background: var(--mmm);
-  box-shadow: 3px 3px 4px rgba(140, 140, 141, 0.549);
+  border: solid 2px white;
+  box-shadow: 10px 2px 3px --blackColor(140, 140, 141, 0.549);
 }
 .creatematchsection .creatematchmain .txxt {
   color: white;
@@ -43,6 +44,12 @@
   height: 2.5rem;
   width: 13rem;
   border: var(--whiteColor) solid 3px;
+  color: black;
+  background: var(--whiteColor);
+}
+.creatematchsection .creatematchmain .matchname .matchnameinp:focus {
+  border: solid 2px var(--mmy);
+  outline: none;
 }
 .creatematchsection .reservationdate {
   transform: translate(20.5rem, -0.4rem);
@@ -52,9 +59,14 @@
   height: 2.5rem;
   width: 14.9rem;
   border: var(--whiteColor) solid 3px;
-  color: gray;
   font-weight: 400;
   font-size: 17px;
+  color: black;
+  background: var(--whiteColor);
+}
+.creatematchsection .reservationdate .reservationdat:focus {
+  border: solid 2px var(--mmy);
+  outline: none;
 }
 .creatematchsection .chosefield {
   transform: translate(3.5rem, 1rem);
@@ -63,10 +75,15 @@
   border-radius: 1rem;
   height: 2.5rem;
   width: 32rem;
-  color: gray;
   font-weight: 400;
   font-size: 17px;
   border: var(--whiteColor) solid 3px;
+  color: black;
+  background: var(--whiteColor);
+}
+.creatematchsection .chosefield .chosef:focus {
+  border: solid 2px var(--mmy);
+  outline: none;
 }
 .creatematchsection .chosefield .chosef .fields {
   color: var(--blackColor2);
@@ -78,6 +95,13 @@
   width: 35rem;
   height: 9rem;
   border-radius: 0.5rem;
+  color: black;
+  border: var(--whiteColor) solid 3px;
+  background: var(--whiteColor);
+}
+.creatematchsection .descrip .descripp:focus {
+  border: solid 2px var(--mmy);
+  outline: none;
 }
 .creatematchsection .matchcrt {
   padding: 0.6rem 1.5rem;
@@ -89,7 +113,7 @@
   color: white;
   font-weight: 600;
   font-size: 15px;
-  transform: translate(36.7rem, 12.1rem);
+  transform: translate(36.9rem, 12.7rem);
   width: 7rem;
   height: 2.6rem;
 }
