--- a/client/src/components/matchs/creatematch.scss
+++ b/client/src/components/matchs/creatematch.scss
@@ -14,20 +14,25 @@
     --cardHover: rgba(255, 255, 255);
     --mmm: hsl(155, 38%, 41%);
     --blackColor2: hsl(198, 19%, 45%);
+    --blackColor6: hsl(198, 31%, 38%);
+    --blackColor3: hsl(153, 29%, 33%);
 
 }
 
 .creatematchsection {
     transform: translateY(-3rem);
+
     .creatematchmain {
-        border: var(--whiteColor) 3px solid;
-        height: 23rem;
+        height: 24rem;
         width: 45rem;
         margin: 0 auto;
         transform: translateY(5rem);
         border-radius: 2rem;
-        background: var(--mmm);
-        box-shadow: 3px 3px 4px rgba(140, 140, 141, 0.549);
+        border: solid 2px white;
+        box-shadow: 10px 2px 3px --blackColor(140, 140, 141, 0.549);
+
+       
+
         .txxt{
             color: white;
             padding-right: 1px;
@@ -45,6 +50,14 @@
                 height: 2.5rem;
                 width: 13rem;
                 border: var(--whiteColor) solid 3px;
+                color: black;
+                background: var(--whiteColor);
+                &:focus{
+                    border: solid 2px var(--mmy);
+                    outline: none; 
+        
+                }
+
 
             }
         }
@@ -57,9 +70,15 @@
             height: 2.5rem;
             width: 14.9rem;
             border: var(--whiteColor) solid 3px;
-            color: gray;
             font-weight: 400;
             font-size: 17px;
+            color: black;
+            background: var(--whiteColor);
+            &:focus{
+                border: solid 2px var(--mmy);
+                outline: none; 
+    
+            }
 
         }
 
@@ -71,10 +90,17 @@
             border-radius: 1rem;
             height: 2.5rem;
             width: 32rem;
-            color: gray;
+           
             font-weight: 400;
             font-size: 17px;
             border: var(--whiteColor) solid 3px;
+            color: black;
+            background: var(--whiteColor);
+            &:focus{
+                border: solid 2px var(--mmy);
+                outline: none; 
+    
+            }
 
             .fields{
                 color: var(--blackColor2);
@@ -91,6 +117,15 @@
             width: 35rem;
             height: 9rem;
             border-radius: 0.5rem;
+            color: black;
+            border: var(--whiteColor) solid 3px;
+
+            background: var(--whiteColor);
+            &:focus{
+                border: solid 2px var(--mmy);
+                outline: none; 
+    
+            }
 
 
         }
@@ -105,7 +140,7 @@
         color: white;
         font-weight: 600;
         font-size: 15px;
-        transform: translate(36.7rem, 12.1rem);
+        transform: translate(36.9rem, 12.7rem);
         width: 7rem;
         height: 2.6rem;
         &:hover{
