--- a/client/src/components/matchs/match.scss
+++ b/client/src/components/matchs/match.scss
@@ -28,12 +28,12 @@
             height: 100%;
             display: grid;
             row-gap: 10px;
-            // padding: 1rem;
-            border-radius: 10px;
+            border-radius: 15px;
             align-items: center;
             background: var(--cardBG);
-            box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
+                box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
             overflow: hidden;
+            border: solid 1px var(--whiteColor);
 
             &:hover {
                 background: var(--mmm);
