--- a/client/src/components/posts/getpost.css
+++ b/client/src/components/posts/getpost.css
@@ -17,6 +17,7 @@
   --mmr: hsl(0, 57%, 53%);
   --blackColor2: hsl(198, 19%, 45%);
   --whiteColordeam2: hsl(0, 60%, 99%);
+  --blackColor3: hsl(153, 29%, 33%);
 }
 
 .post {
@@ -33,40 +34,41 @@
   row-gap: 10px;
   border-radius: 1.5rem;
   align-items: center;
-  background: var(--whiteColordeam2);
+  background: var(--blackColor3);
   box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
   overflow: hidden;
-  border: 2.4px solid var(--blackColor2);
+  border: 2.35px solid var(--whiteColor);
 }
 .post .postContent .singlepost .postcrtpic .imga {
   border-radius: 50%;
   height: 55px;
   width: 55px;
   transform: translate(0.65rem, 0.8rem);
-  border: 2.4px solid var(--blackColor2);
+  border: 2.2px solid var(--whiteColor);
 }
 .post .postContent .singlepost .postcreator {
   transform: translate(4.6rem, -2.3rem);
   font-size: 19px;
-  color: var(--blackColor);
-  font-weight: 500;
+  color: var(--whiteColor);
+  font-weight: 400;
 }
 .post .postContent .singlepost .contentdiv {
   width: 39.9rem;
-  border-bottom: 1.5px solid var(--blackColor2);
+  border-bottom: 1.5px solid var(--whiteColor);
   border-radius: 0.11rem;
-  background-color: var(--whiteColordeam2);
+  background-color: var(--blackColor3);
   height: flex;
   transform: translate(0px, -11px);
 }
 .post .postContent .singlepost .contentdiv .postpic .imgb {
   height: 23rem;
-  width: 39.9rem;
-  transform: translate(0rem, 0.5xrem);
+  width: 36rem;
+  transform: translate(0.8rem, -1rem);
+  border-radius: 1.9rem;
 }
 .post .postContent .singlepost .contentdiv .desc {
   font-size: 17px;
-  color: var(--blackColor);
+  color: var(--whiteColor);
   font-weight: 400;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -86,19 +88,19 @@
   height: 2.9rem;
   outline: none;
   cursor: pointer;
-  background: var(--whiteColordeam2);
+  background: var(--blackColor3);
   border: none;
   margin: 7rem;
 }
 .post .postContent .singlepost .postbtnsdiv .postbtns .postico {
-  color: var(--blackColor2);
+  color: var(--whiteColor);
   font-size: 25px;
 }
 .post .postContent .singlepost .postbtnsdiv .postbtns .postico:hover {
   color: var(--mmr);
 }
 .post .postContent .singlepost .postbtnsdiv .postbtns .postico2 {
-  color: var(--blackColor2);
+  color: var(--whiteColor);
   font-size: 25px;
 }
 .post .postContent .singlepost .postbtnsdiv .postbtns .postico2:hover {
