--- a/client/src/components/posts/getpost.scss
+++ b/client/src/components/posts/getpost.scss
@@ -17,6 +17,8 @@
     --mmr: hsl(0, 57%, 53%);
     --blackColor2: hsl(198, 19%, 45%);
     --whiteColordeam2: hsl(0, 60%, 99%);
+    --blackColor3: hsl(153, 29%, 33%);
+
 
 
 
@@ -26,13 +28,13 @@
     width: 10%;
     transform: translate(43.4rem, 5.6rem);
 
-
-
+  
 
 
     .postContent {
         justify-content: center;
         gap: 1.5rem;
+        
 
 
         .singlepost {
@@ -41,10 +43,10 @@
             row-gap: 10px;
             border-radius: 1.5rem;
             align-items: center;
-            background: var(--whiteColordeam2);
+            background: var(--blackColor3);
             box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
             overflow: hidden;
-            border: 2.4px solid var(--blackColor2);
+            border: 2.35px solid var(--whiteColor);
 
             .postcrtpic {
 
@@ -53,7 +55,7 @@
                     height: 55px;
                     width: 55px;
                     transform: translate(0.65rem, 0.8rem);
-                    border: 2.4px solid var(--blackColor2);
+                    border: 2.2px solid var(--whiteColor);
 
                 }
 
@@ -62,15 +64,15 @@
             .postcreator {
                 transform: translate(4.6rem, -2.3rem);
                 font-size: 19px;
-                color: var(--blackColor);
-                font-weight: 500;
+                color: var(--whiteColor);
+                font-weight: 400;
             }
 
             .contentdiv {
                 width: 39.9rem;
-                border-bottom: 1.5px solid var(--blackColor2);
+                border-bottom: 1.5px solid var(--whiteColor);
                 border-radius: 0.11rem;
-                background-color: var(--whiteColordeam2);
+                background-color: var(--blackColor3);
 
                 height: flex;
                 transform: translate(0px, -11px);
@@ -79,8 +81,9 @@
 
                     .imgb {
                         height: 23rem;
-                        width: 39.9rem;
-                        transform: translate(0rem, 0.5xrem);
+                        width: 36rem;
+                        transform: translate(0.8rem, -1rem);
+                        border-radius:1.9rem ;
 
                     }
 
@@ -89,7 +92,7 @@
 
                 .desc {
                     font-size: 17px;
-                    color: var(--blackColor);
+                    color: var(--whiteColor);
                     font-weight: 400;
                     padding-left: 1.5rem;
                     padding-right: 1.5rem;
@@ -114,13 +117,13 @@
                     height: 2.9rem;
                     outline: none;
                     cursor: pointer;
-                    background: var(--whiteColordeam2);
+                    background: var(--blackColor3);
                     border: none;
                     margin: 7rem;
 
 
                     .postico {
-                        color: var(--blackColor2);
+                        color: var(--whiteColor);
                         font-size: 25px;
 
                         &:hover {
@@ -129,7 +132,7 @@
                     }
 
                     .postico2 {
-                        color: var(--blackColor2);
+                        color: var(--whiteColor);
                         font-size: 25px;
 
                         &:hover {
