--- a/client/src/components/sign/Register/register.scss
+++ b/client/src/components/sign/Register/register.scss
@@ -33,12 +33,12 @@
         font-weight: 600;
         text-align: center;
         color: white;
-        transform: translateY(-30px);
+        transform: translateY(-65px);
 
     }
 
     .formtxt {
-        transform: translateY(10PX);
+        transform: translateY(-2rem);
         display: flex;
         flex-direction: column;
         gap: 1rem;
