--- a/client/src/components/matchs/creatematch.css
+++ b/client/src/components/matchs/creatematch.css
@@ -27,7 +27,7 @@
   margin: 0 auto;
   transform: translateY(5rem);
   border-radius: 2rem;
-  border: solid 2px white;
+  border: dotted 5px var(--mmy);
   box-shadow: 10px 2px 3px --blackColor(140, 140, 141, 0.549);
 }
 .creatematchsection .creatematchmain .txxt {
@@ -89,10 +89,10 @@
   color: var(--blackColor2);
 }
 .creatematchsection .descrip {
-  transform: translate(5rem, 0rem);
+  transform: translate(6.4rem, 0rem);
 }
 .creatematchsection .descrip .descripp {
-  width: 35rem;
+  width: 32rem;
   height: 9rem;
   border-radius: 0.5rem;
   color: black;
