--- a/client/src/components/matchs/match.css
+++ b/client/src/components/matchs/match.css
@@ -27,12 +27,10 @@
   height: 100%;
   display: grid;
   row-gap: 10px;
-  border-radius: 15px;
+  border-radius: 18px;
   align-items: center;
   background: var(--cardBG);
-  box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
   overflow: hidden;
-  border: solid 1px var(--whiteColor);
 }
 .mainmatch .matchContent .singlematch:hover {
   background: var(--mmm);
@@ -110,10 +108,10 @@
   height: 2.5rem;
   border: none;
   background: var(--gradientColor);
-  transform: translatex(13rem);
 }
 .mainmatch .matchContent .singlematch .matchbtn .ta {
   transform: translate(25px, -1px);
+  color: white;
 }
 .mainmatch .matchContent .singlematch .matchbtn .ta .matchicon {
   transform: translate(1px, 3px);
@@ -123,7 +121,7 @@
 
 @media screen and (min-width: 500px) {
   .matchContent {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
   }
   .matchContent .singleDestination {
     height: auto;
