--- a/client/src/components/posts/getpost.css
+++ b/client/src/components/posts/getpost.css
@@ -34,10 +34,9 @@
   row-gap: 10px;
   border-radius: 1.5rem;
   align-items: center;
-  background: var(--blackColor3);
   box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
   overflow: hidden;
-  border: 2.35px solid var(--whiteColor);
+  border: 2.5px solid var(--whiteColor);
 }
 .post .postContent .singlepost .postcrtpic .imga {
   border-radius: 50%;
@@ -56,7 +55,6 @@
   width: 39.9rem;
   border-bottom: 1.5px solid var(--whiteColor);
   border-radius: 0.11rem;
-  background-color: var(--blackColor3);
   height: flex;
   transform: translate(0px, -11px);
 }
@@ -88,7 +86,7 @@
   height: 2.9rem;
   outline: none;
   cursor: pointer;
-  background: var(--blackColor3);
+  background: hsl(173, 82%, 24%);
   border: none;
   margin: 7rem;
 }
