--- a/client/src/components/sign/Register/register.css
+++ b/client/src/components/sign/Register/register.css
@@ -33,10 +33,10 @@
   font-weight: 600;
   text-align: center;
   color: white;
-  transform: translateY(-30px);
+  transform: translateY(-65px);
 }
 .bg .log .formtxt {
-  transform: translateY(10PX);
+  transform: translateY(-2rem);
   display: flex;
   flex-direction: column;
   gap: 1rem;
