--- a/client/src/pages/internautepages/pagescss/profile.css
+++ b/client/src/pages/internautepages/pagescss/profile.css
@@ -20,24 +20,12 @@
 }
 .profsec .proff {
   padding: 20px;
-  max-width: 70rem;
-  max-height: 31rem;
+  max-width: 40rem;
+  max-height: 45rem;
   margin: 0 auto;
-  transform: translateY(34%);
-  background-color: var(--mmm);
+  transform: translate(-1rem, 14%);
   border-radius: 2rem;
-  border: 3px solid white;
-}
-.profsec .proff .proftit {
-  margin-top: -2.5rem;
-  margin-bottom: 1.75rem;
-  margin-right: 46rem;
-  font-size: 2.5rem;
-  line-height: 2.25rem;
-  font-weight: 500;
-  text-align: center;
-  color: white;
-  transform: translateY(60px);
+  border: 6px dotted white;
 }
 .profsec .proff .profform {
   transform: translateY(-20PX);
@@ -51,11 +39,11 @@
   margin-right: 0rem;
   align-self: center;
   border-radius: 50%;
-  width: 7.6rem;
-  height: 7.5rem;
+  width: 8rem;
+  height: 8rem;
   cursor: pointer;
-  transform: translateY(-100px);
-  border: 3px solid white;
+  transform: translate(0rem, 1rem);
+  border: 4px solid white;
 }
 .profsec .proff .profform .yh {
   align-self: center;
@@ -71,10 +59,10 @@
   border-radius: 1.5rem;
   margin-bottom: 0.5rem;
   margin-top: 0;
-  transform: translateX(230px) translateY(-50px);
+  transform: translateX(3.6rem) translateY(1rem);
   outline: none;
   background: var(--whiteColor);
-  width: 40rem;
+  width: 30rem;
   border: none;
 }
 .profsec .proff .profform .probtn {
@@ -85,11 +73,11 @@
   font-size: 700;
   font-size: 1rem;
   font-weight: 600;
-  transform: translateX(230px) translateY(-50px);
+  transform: translateX(4rem) translateY(1rem);
   color: var(--whiteColor);
   border: none;
   outline: none;
-  width: 40rem;
+  width: 30rem;
   cursor: pointer;
 }
 .profsec .proff .profform .probtn:hover.probtn {
@@ -108,11 +96,11 @@
   font-size: 700;
   font-size: 1rem;
   font-weight: 600;
-  transform: translateX(230px) translateY(-80px);
+  transform: translateX(4rem) translateY(-1rem);
   color: white;
   border: none;
   outline: none;
-  width: 40rem;
+  width: 30rem;
   cursor: pointer;
 }
 .profsec .proff .proft .proftx:hover.proftx {
