create mainad page and fixing dahsid

--- a/client/src/components/dash/managepost.css
+++ b/client/src/components/dash/managepost.css
@@ -18,21 +18,22 @@
 .tabsec {
   padding: 0.75rem;
   table-layout: auto;
+  margin-top: 5rem;
+  margin-left: 1rem;
 }
 .tabsec .tabs {
   min-width: 100%;
   border: 2px solid var(--whiteColor);
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  border-radius: 0rem;
-  background: var(--bodyColor);
+  border-radius: 2rem;
+  background: var(--mm);
 }
 .tabsec .tabs .tabattrb {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
   padding-right: 1rem;
-  border-bottom-width: 1px;
-  border: var(--whiteColor) solid 2px;
+  border-bottom: solid white 2px;
 }
 .tabsec .tabs .ms {
   border-bottom-width: 5px solid var(--blackColor);
@@ -42,7 +43,6 @@
   padding-bottom: 0.5rem;
   padding-left: 1rem;
   padding-right: 1rem;
-  border: var(--whiteColor) solid 2px;
 }
 .tabsec .tabs .ms .mrp .mrppic {
   -o-object-fit: cover;
@@ -55,9 +55,9 @@
 }
 .tabsec .tabs .ms .mrp .deltemrp {
   font-weight: 500;
-  color: #EF4444;
+  color: var(--whiteColordeam);
   cursor: pointer;
-  margin-left: 3rem;
+  transform: translate(1rem);
 }
 .tabsec .tabs .ms .mrp .deltemrp :hover {
   text-decoration: underline;
