--- a/client/src/components/dash/managepost.css
+++ b/client/src/components/dash/managepost.css
@@ -26,14 +26,14 @@
   border: 2px solid var(--whiteColor);
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   border-radius: 2rem;
-  background: var(--mm);
+  margin-top: 2rem;
 }
 .tabsec .tabs .tabattrb {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  padding-left: 1rem;
   padding-right: 1rem;
   border-bottom: solid white 2px;
+  color: white;
 }
 .tabsec .tabs .ms {
   border-bottom-width: 5px solid var(--blackColor);
@@ -41,24 +41,18 @@
 .tabsec .tabs .ms .mrp {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  padding-left: 1rem;
+  padding-left: 4.5rem;
   padding-right: 1rem;
+  color: white;
 }
 .tabsec .tabs .ms .mrp .mrppic {
   -o-object-fit: cover;
      object-fit: cover;
   height: 2.5rem;
 }
-.tabsec .tabs .ms .mrp .mrpst {
-  font-weight: 500;
-  color: #111827;
-}
 .tabsec .tabs .ms .mrp .deltemrp {
   font-weight: 500;
-  color: var(--whiteColordeam);
+  color: orange;
   cursor: pointer;
   transform: translate(1rem);
-}
-.tabsec .tabs .ms .mrp .deltemrp :hover {
-  text-decoration: underline;
 }/*# sourceMappingURL=managepost.css.map */
