--- a/client/src/components/dash/dashside.scss
+++ b/client/src/components/dash/dashside.scss
@@ -29,30 +29,35 @@
 
     width: 100%; 
     height:5rem;
+    transform: translateY(5rem);
+    border-right: solid white 2px;
+    border-top:solid white 2px; ;
+    border-bottom:solid white 2px; ;
 
-    background: var(--mmy);
-    margin-top: 4.9rem;
 
     border-bottom-right-radius:2rem ;
-    transform: translate(0rem);
 
     .sidebaritems{
-        margin-left:12rem;
+        margin-left:1rem;
      
         
     .sidebaritemgroup{
 
     
-        margin-left: -2rem;
+        margin-left: 1rem;
         margin-right: 1rem;
-        margin-top: 1.6rem;
-
+        margin-top: 1.5rem;
         display: flex;
 
 
 
+
         .sidebaritem{
-            margin-left: 4rem;
+            margin-left: 0.2rem;
+            margin-right: 4rem;
+
+            margin-bottom: 2rem;
+            width: 8rem;
          
             color: white;
             font-size: 21px;
