--- a/client/src/components/posts/getpost.css
+++ b/client/src/components/posts/getpost.css
@@ -36,7 +36,8 @@
   align-items: center;
   box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
   overflow: hidden;
-  border: 2.5px solid var(--whiteColor);
+  border: 2.5px solid var(--mmy);
+  background: rgb(39, 39, 39);
 }
 .post .postContent .singlepost .postcrtpic .imga {
   border-radius: 50%;
@@ -72,6 +73,7 @@
   padding-right: 1.5rem;
   padding-top: 1rem;
   padding-bottom: 1.5rem;
+  background: rgb(39, 39, 39);
 }
 .post .postContent .singlepost .postbtnsdiv {
   display: flex;
@@ -86,7 +88,7 @@
   height: 2.9rem;
   outline: none;
   cursor: pointer;
-  background: hsl(173, 82%, 24%);
+  background: rgb(39, 39, 39);
   border: none;
   margin: 7rem;
 }
