--- a/client/src/components/dash/dashside.css
+++ b/client/src/components/dash/dashside.css
@@ -25,9 +25,10 @@
   width: 100%;
   height: 5rem;
   transform: translateY(5rem);
-  border-right: solid white 2px;
+  border-right: solid rgb(39, 39, 39) 2px;
   border-top: solid white 2px;
-  border-bottom: solid white 2px;
+  border-bottom: solid rgb(39, 39, 39) 2px;
+  background: rgb(39, 39, 39);
   border-bottom-right-radius: 2rem;
 }
 .sidsection .sidebaritems {
@@ -48,7 +49,7 @@
   font-size: 21px;
 }
 .sidsection .sidebaritems .sidebaritemgroup .sidebaritem:hover {
-  background: var(--mmx);
+  background: var(--mmy);
   border-radius: 1rem;
 }
 .sidsection .sidebaritems .sidebaritemgroup .sidebaritem:hover .sidebarlabel {
