--- a/client/src/components/dash/dashside.scss
+++ b/client/src/components/dash/dashside.scss
@@ -30,9 +30,11 @@
     width: 100%; 
     height:5rem;
     transform: translateY(5rem);
-    border-right: solid white 2px;
+    border-right: solid rgb(39, 39, 39)2px;
     border-top:solid white 2px; ;
-    border-bottom:solid white 2px; ;
+    border-bottom:solid rgb(39, 39, 39) 2px; ;
+    background: rgb(39, 39, 39);
+
 
 
     border-bottom-right-radius:2rem ;
@@ -63,7 +65,7 @@
             font-size: 21px;
             
             &:hover{
-                background: var(--mmx);
+                background: var(--mmy);
                 border-radius:1rem ;
            
 
