--- a/client/src/components/matchs/creatematch.scss
+++ b/client/src/components/matchs/creatematch.scss
@@ -29,8 +29,10 @@
         margin: 0 auto;
         transform: translateY(5rem);
         border-radius: 2rem;
-        border: dotted 5px var(--mmy);
+        border: solid 5px var(--mmy);
         box-shadow: 10px 2px 3px --blackColor(140, 140, 141, 0.549);
+        background: rgb(39, 39, 39);
+
         
 
        
