--- a/client/src/components/profile/profinfo.scss
+++ b/client/src/components/profile/profinfo.scss
@@ -28,18 +28,22 @@
 
 
 .accountinfo{
+
     .accountinfffo{
         transform: translate(2rem,8rem);
 
     width: 95%;
     height: flex;
     border-radius:3rem ;
+            background: rgb(39, 39, 39);
+
     .topinfo{
         height: 11rem;
         
         width: 80%;
         border-bottom: solid 2px white;
         transform: translate(8.5rem,1rem);
+        
 
         .profileeimg{
            width: 9rem;
@@ -60,6 +64,7 @@
     .accounattrb{
         border: white solid 3px;
         box-shadow: 0 2px 1px gray(255, 255, 255, 0.904);
+        background: rgb(39, 39, 39);
 
 
         border-radius: 3rem;
@@ -92,12 +97,13 @@
     }
 
     .pub{
-        border: solid 3px white;
+        border-left: solid 3px white;
 
         width: 50rem;
         transform: translate(30rem,-27rem);
         height: flex;
-        border-radius: 3rem;
+        border-radius: 1rem;
+        
         
 
         .postContentt{
@@ -115,6 +121,8 @@
                 box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
                 overflow: hidden;
                 border: 2.35px solid var(--whiteColor);
+                background: rgb(39, 39, 39);
+
                 .postcrtpicc{
                     .imgaa{
                         border-radius: 50%;
